# core-setup

src/corehost/cli/hostpolicy/: CMakeLists.txt  mono.cpp  mono.h
src/corehost/cli/test/: CMakeLists.txt
src/corehost/cli/test/mockmono/: CMakeLists.txt  mockmono.cpp  mockmono.h
src/corehost/common/: pal.h
